# PANDA_CORE

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  README.md  demo_data_reader.py  mkdocs.yml  plan.md  preview_protocol.py  pyproject.toml  requirements.txt  run_protocol_hardware.py  run_three_well_protocol_python.py  setup.cfg  show_deck_objects.py  system_manifest.yaml  test_cnc_move.py  trace_well_plate_corners.py  verify_experiment.py
.github/workflows/: tests.yml
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-06.jsonl  notify-fallback-2026-04-07.jsonl  omx-2026-04-06.jsonl  omx-2026-04-07.jsonl  (+3 more)
calibration/: home_gantry.py  home_machine.py
configs/: README.md  deck.sample.yaml  genmitsu_3018_PRO_Desktop.yaml  genmitsu_3018_PROver_v2.yaml  mofcat_board.yaml  mofcat_deck.yaml  protocol.sample.yaml
configs_new/: README.md
data/: MODULE.md  __init__.py  data_reader.py  data_store.py  export_helpers.py
digital-twin/: README.md
docs/: agent-index.md  board.md  calibration.md  configuration.md  data-and-analysis.md  data.md  deck.md  development.md  gantry.md  gen_ref_pages.py  getting-started.md  hardware-operations.md  index.md  protocol.md  protocols.md  troubleshooting.md
experiments/: sample_three_well_protocol.yaml  simple_imaging_protocol.yaml
progress/: 2026-02-02.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-19.md  2026-02-20.md  2026-03-02-reconfigure-gantry-axes.md  2026-03-02.md  2026-03-03.md  2026-03-08-multi-agent-scaffold-design.md  2026-03-09-protocol-features.md  2026-03-09-tip-rack-tracking.md  2026-03-09.md  2026-03-11.md  2026-03-12.md  2026-03-16.md  2026-04-03.md  2026-04-08.md  2026-04-09.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-22.md  2026-04-28-agent-index.md  2026-04-28.md  2026-04-30-gantry-driver-safety-pass.md  2026-05-04-gantry-driver-status-requery.md  2026-05-04.md  2026-05-05-measure-gantry-injection.md  2026-05-05-multi-instrument-calibration.md  2026-05-05-relative-heights-and-safe-z.md  2026-05-05-well-depth-mm.md  2026-05-07-cub-xl-right-rail-guard.md  2026-05-07-rename-height-syntax.md  README.md  (+4 more)
scripts/: check_imports.py  install-hooks.sh  validate_agent_changes.py
setup/: __init__.py  calibrate_deck_origin.py  calibrate_gantry.py  calibrate_multi_instrument_board.py  hello_world.py  home_gantry_config.py  home_manual.py  instrument_calibration.py  keyboard_input.py  run_protocol.py  run_sterling_scan.py  test_connection.py  validate_setup.py
src/: contracts.py
tests/: test_base_instrument.py  test_cnc.py  test_contracts.py  test_deck.py  test_deck_loader.py  test_driver_logic.py  test_filmetrics.py  test_gantry.py  test_holder_labware.py  test_initial_volume.py  test_labware.py  test_manual_origin_homing.py  test_panda_deck_yaml.py  test_protocol_engine.py  test_tip_rack_labware.py  test_trace_well_plate_corners.py  test_twin_public_api.py  test_uvvis_ccs.py
webcam_yolo/: README.md  check_cameras.py  main.py
(+441 files in other folders)
