[project]
name = "cubos"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pyserial",
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest"]
emstat = ["hardpotato"]
gamry = ["comtypes; sys_platform == 'win32'"]
potentiostat = [
    "hardpotato",
    "comtypes; sys_platform == 'win32'",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-gen-files>=0.5",
    "mkdocstrings[python]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["board", "board.*", "data", "data.*", "deck", "deck.*",
           "gantry", "gantry.*", "instruments", "instruments.*",
           "protocol_engine", "protocol_engine.*", "validation", "validation.*"]

[tool.setuptools.package-data]
"instruments" = ["registry.yaml"]
"gantry.gantry_driver" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
