[project]
name = "cubos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    # Needed by tests/instruments/test_registry_packaging.py, which shells
    # out to setuptools.build_meta. Python 3.12+ no longer bundles setuptools.
    "setuptools",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-gen-files>=0.5",
    "mkdocstrings[python]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["board", "board.*", "data", "data.*", "deck", "deck.*",
           "digital_twin", "digital_twin.*",
           "gantry", "gantry.*", "instruments", "instruments.*",
           "protocol_engine", "protocol_engine.*", "validation", "validation.*"]

[tool.setuptools.package-data]
"instruments" = ["registry.yaml"]
"gantry.gantry_driver" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
