[project]
name = "cubos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyserial",
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    # Needed by tests/instruments/test_registry_packaging.py, which shells
    # out to setuptools.build_meta. Python 3.12+ no longer bundles setuptools.
    "setuptools",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-gen-files>=0.5",
    "mkdocstrings[python]>=0.27",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["board", "board.*", "data", "data.*", "deck", "deck.*",
           "gantry", "gantry.*", "instruments", "instruments.*",
           "protocol_engine", "protocol_engine.*", "validation", "validation.*"]

[tool.setuptools.package-data]
"deck" = [
    "labware/definitions/registry.yaml",
    "labware/definitions/**/*.yaml",
    "labware/definitions/**/*.glb",
    "labware/definitions/**/*.png",
    "labware/definitions/**/*.stl",
    "labware/definitions/**/*.step",
]
"instruments" = ["registry.yaml"]
"gantry.gantry_driver" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
